# vulkan

./: .clang-format  .gitignore  .gitmodules  Apunts.md  CMakeLists.txt  LICENSE  Logger.h  Plan.md  README.md  app.cc  conanfile.py
.cache/clangd/index/: app.cc.C15AB8FC2DCB168A.idx  glfw3.h.932D90B69207ECFF.idx  vk_platform.h.FBB2C6CDCF5DF0DC.idx  vulkan.h.7DF95DB8F9D89C0C.idx  vulkan_core.h.3B7A805206E784F5.idx  vulkan_video_codec_h264std.h.597AF09C7CE9FF5C.idx  vulkan_video_codec_h264std_decode.h.23706240A734B297.idx  vulkan_video_codec_h265std.h.5C9057FDB13E7506.idx  vulkan_video_codec_h265std_decode.h.1FFE8D26A4CF36C7.idx  vulkan_video_codecs_common.h.D3223A64EFA970AB.idx
.zed/: debug.json
data/shaders/: compile.sh  frag.spv  shader.frag  shader.spv  shader.vert  vert.spv
design/: DissenySceneTree.excalidraw  GraphicsLab.vpp  GraphicsLab.vpp.vbak
docs/: roadmap.md
include/: Camera.h  Logger.h  Object.h  Vertex.h  VulkanEngine.h  VulkanExtras.h  tiny_obj_loader.h  vk_Buffer.h  vk_Context.h  vk_SwapChain.h  vk_utils.h
prove_concepts/: stdvec.x
shaders/: shader.vert
src/: 27_depth_buffering.cpp  CMakeLists.txt  GlfwCreateRendererContext.hpp  Logger.h  Object.cpp  Object.h  RendererContext.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Vertex.cpp  Vertex.h  VulkanEngine.cpp  VulkanExtras.cpp  app.cc  app.cpp  macros.hpp  resourceLoader.cpp  resourceLoader.h  resourceLoader.hpp  shaderReflexion.hpp  srLight.hpp  srMaterial.cpp  srMaterial.hpp  srMesh.cpp  srMesh.hh  srModel.hpp  srPool.hpp  srShader.cpp  srShader.hpp  srTexture.cpp  srTexture.hpp  vkBuffer.cpp  vkBuffer.h  vkBuffer.hh  vkCommandBuffer.hh  vkDescriptorSetLayout.cpp  vkDevice.cpp  vkDevice.hh  vkImage.cpp  vkImage.h  (+16 more)
src/internal/: CMakeLists.txt
src/internal/scene/: AttributeStorage.hpp  CMakeLists.txt  Element.hpp  ElementUtils.hpp  Logger.hpp  Model.hpp  Scene.hpp  Shader.hpp  SharedSet.hpp  TypeEnums.hpp  gbg_traits.hpp  resourceLoader.hpp
src/internal/scene/tests/: CMakeLists.txt  MeshTests.cpp  TEST_attrib_storage.cpp  modeltests.cpp  testshared.cpp
src/io_utils/: file_utils.cpp  file_utils.hpp  watcher.hpp
src/primitives/: axes.hpp  plane_mat.hpp  plane_shader.frag  plane_shader.vert
src/scene/: Model.hpp  Scene.hpp  Shader.hpp  TypeEnums.hpp
src/scene/tests/: modeltests.cpp
src/traits/: traits.hpp
src/vk_utils/: Logger.hpp  vkBuffer.cpp  vkCommandBuffer.cpp  vkCommandBuffer.hh  vkDebugMessangerEXT.hh  vkDevice.cpp  vkDevice.hh  vkImage.cpp  vkImage.hh  vkInstance.cpp  vkInstance.hh  vkMesh.cpp  vkMesh.hh  vkPipeline.cpp  vkPipeline.hh  vkSwapChain.cpp  vkSwapChain.h  vkTexture.cpp  vkUtil.cpp  vkUtil.hh  vkVertexDescriptions.h
tests/: app.cpp  example.cc  imgui.ini
tests/data/models/Cube/: Cube.blend
tests/data/models/EasyModels/: scene.mtl  square.blend  square.blend1
tests/data/models/RendererScene/: RendererObjects.blend  RendererObjects.blend1  RendererObjects.mtl  plain_color.frag  plain_color.vert
tests/data/shaders/: frag.spv  shader.frag  shader.vert  shadow.vert  vert.spv
tests/playground/: stdvec.cc  traits  traits.cc
tools/: get-deps.sh
